--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
     "dev": "node --watch ./app.js",
     "dev1": "node --watch ./misc/index.js",
     "dev2": "node --watch ./misc/routes.js",
